--- a/frontendmocapsfaveladelivery-main/src/components/Input/styles.css
+++ b/frontendmocapsfaveladelivery-main/src/components/Input/styles.css
@@ -1,4 +1,4 @@
-input {
+/*input {
   width: 100%;
   height: 50px;
   padding-left: 16px;
@@ -8,4 +8,4 @@ input {
   margin-bottom: 16px;
   outline: 0;
   font: 400 0.9rem 'Roboto', sans-serif;
-}
+}*/
